New changes for all webpages

--- a/articles.html
+++ b/articles.html
@@ -212,7 +212,7 @@
           </div>
         </div>
         <a href="articles.html">Articles</a>
-        <a href="books.html">Books</a>
+        <a href="book.html">Books</a>
         <a href="news.html">News</a>
       </div>
       <div class="nav-right">
